<resources>
    <string name="app_name">NokNok</string>
    <string name="i_am">I AM</string>
    <string name="your_full_name">YOUR FULL NAME</string>
    <string name="my_phone_number">MY PHONE NUMBER</string>
    <string name="enter">ENTER</string>
    <string name="next">NEXT</string>
    <string name="country_code">Country Code</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="verify_your_phone">Please verify your phone no.\nWe have sent OTP on</string>
    <string name="otp">OTP</string>
    <string name="done">DONE</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="pickup_your_phone">Please pick up your phone</string>
    <string name="location_disabled">Location Service Disabled</string>
    <string name="location_disabled_text">Please turn on Location Services to allow us to determine your location.</string>
    <string name="settings">SETTINGS</string>
    <string name="right_guess">RIGHT GUESS</string>
    <string name="friends">FRIENDS</string>
    <string name="messages">MESSAGES</string>
    <string name="confessions">CONFESSIONS</string>
    <string name="tap_hold_to_record"><![CDATA[Tap & hold to Record]]></string>
    <string name="post_confession">POST CONFESSION</string>
    <string name="direct_message">DIRECT MESSAGE</string>
    <string name="you_want_to_post_this_confession_as">You want to post this confession as</string>
    <string name="post">POST</string>
    <string name="select_filter">SELECT FILTER</string>
    <string name="Selecting_your_friend_to">Selecting your friend to</string>
    <string name="send_your_message">send your message!</string>
    <string name="no_friend_found">No Friend Found!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet. Per suscipit appetere platonem no, mea eu elit etiam persequeris.</string>
    <string name="lets_go">LET\'S GO</string>
    <string name="record_message">RECORD MESSAGE</string>
    <string name="logo">LOGO</string>
    <string name="proceed">PROCEED</string>
    <string name="you_are_already_logged_on_another_device_proceed_to_login">You are already logged on another device. Proceed to login.</string>
    <string name="new_message">NEW MESSAGES</string>
    <string name="old_message">OLD CHATS</string>
    <string name="reply">REPLY</string>
    <string name="new_message_from">New Message from</string>
    <string name="you">YOU</string>
    <string name="send">SEND</string>
    <string name="discard">DISCARD</string>
    <string name="log_out">LOG OUT</string>
    <string name="friends_confessions">FRIENDS CONFESSIONS</string>
    <string name="others_confessions">OTHERS CONFESSIONS</string>
    <string name="my_confessions">MY CONFESSIONS</string>
    <string name="to_guess_please_select_3_contacts">To guess please select 3 contacts</string>
    <string name="you_guessed_it_right">You guessed it right.</string>
    <string name="congrats">CONGRATS!</string>
    <string name="sorry">SORRY!</string>
    <string name="you_guessed_it_wrong">You guessed it wrong!</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="about_us">ABOUT US</string>
    <string name="terms_conditions"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="feedback">FEEDBACK</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="you_can_select_maximum_3_contacts_at_a_time_next_chance_will_be_given_after_6_hours">You can select maximum 3 contacts at a time, next chance will be given after 6 hours</string>
    <string name="no_message_found">No Message Found</string>
    <string name="no_friends_yet">No Friends Yet!</string>
    <string name="no_friends_confessions">No Friends Confessions</string>
    <string name="no_my_confessions">No My Confessions</string>
    <string name="no_other_confessions">No Others Confessions</string>
    <string name="no_old_messages">No Old Messages</string>
    <string name="no_new_messages">No New Messages</string>
    <string name="gps_network_not_enabled">Please Enable Your Location</string>
    <string name="open_location_settings">Enable</string>
    <string name="Cancel">Not Now</string>
    <string name="new_guess_will_be_available_after">New guess will be available after</string>


</resources>
