<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_friends_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:id="@+id/ll_search_bar_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/ll_messages_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="@color/yellow">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/ic_close_f" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.6">

        </LinearLayout>

        <LinearLayout

            android:id="@+id/ll_activity_messages_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:background="@color/blue">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/ic_magnifier" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.1"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/rl_friends_title_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_friends_title_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="10">

                <com.app.noknok.customviews.BoldTextView
                    android:id="@+id/tv_messages_title"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:text="@string/messages"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll_messages_title_underline"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:background="@color/pink"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="horizontal"
                android:weightSum="2">


                <LinearLayout
                    android:id="@+id/ll_activity_messages_new_messages"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_round_corners"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.app.noknok.customviews.BoldTextView
                        android:id="@+id/tv_new_messages_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <com.app.noknok.customviews.MediumTextView
                        android:id="@+id/tv_new_messages_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/new_message"
                        android:textSize="12sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_activity_messages_old_message"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_round_corners_light"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.app.noknok.customviews.BoldTextView
                        android:id="@+id/tv_old_messages_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/lightGrey"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <com.app.noknok.customviews.MediumTextView
                        android:id="@+id/tv_old_messages_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/old_message"
                        android:textColor="@color/lightGrey"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>

            <com.app.noknok.customviews.CustomViewPager
                android:id="@+id/fl_activity_messages_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>